--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -1,32 +1,150 @@
-.overlay-content{
-    position:absolute;
-    margin:0 auto;
-    font-weight:300;
+h1 {
+    margin-top: 0px;
+}
+html {
+    min-height: 100% !important;
+    height: auto;
+    /* make sure it is at least as tall as the viewport */
+    width: 100%;
+    position: relative;
+}
+
+body {
+    height: auto;
+    /* force the BODY element to match the height of the HTML element */
+    width: 100%;
+}
+
+#header {
+    color: #6441A5;
     background-color: white;
 }
-.result-container {
-  position:relative;
-  background-color: white;
-  border-bottom: 1px solid #343447;
-  display:block;
-  min-height:80px;
+
+#header-image {
+    height: 40px;
+    width: 40px;
 }
-.result-container .small-artwork {left:40px; width:40px; height:40px;}
-.result-container .result-info {left:100px; width:50%;}
+
+#heads-up {
+    display: inline;
+}
+
+.overlay-content {
+    position: absolute;
+    margin: 0 auto;
+    font-weight: 300;
+    background-color: white;
+}
+
+.result-container {
+    position: relative;
+    background-color: white;
+    border-bottom: 1px solid #343447;
+    display: block;
+    min-height: 80px;
+}
+
+.result-container .small-artwork {
+    left: 40px;
+    width: 40px;
+    height: 60px;
+}
+
+.result-container .result-info {
+    left: 100px;
+    width: 50%;
+}
 
 .result-container .add-button {
-  position: absolute;
-  right: 0;
-  color: #fff;
-  top: 20px;
-  width: 38px;
-  height: 38px;
-  width:60px;
-  text-decoration:none;
-  text-align: center;
-  line-height: 38px;
-  vertical-align: middle;
-  text-transform:uppercase;
-  font-size:0.8em;
-  font-family: "Montserrat Black";
+    position: absolute;
+    right: 0;
+    color: #fff;
+    top: 20px;
+    width: 38px;
+    height: 38px;
+    width: 60px;
+    text-decoration: none;
+    text-align: center;
+    line-height: 38px;
+    vertical-align: middle;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    font-family: "Montserrat Black";
+}
+
+#main-view {
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+
+
+.vids-container= {
+    height: auto;
+    width: auto;
+    padding: 0 0 0 0;
+}
+
+.vids {
+    height: 80%;
+    width: 49%;
+}
+
+
+
+
+/* Wrapper for page content to push down footer */
+
+#wrap {
+    min-height: auto%;
+    height: auto !important;
+    height: 100%;
+    /* Negative indent footer by it's height */
+    margin: 0 auto -60px;
+}
+
+
+/* Set the fixed height of the footer here */
+
+#push,
+#footer {
+    height: 60px;
+}
+
+#footer {
+    background-color: #f5f5f5;
+}
+
+
+/* Lastly, apply responsive CSS fixes as necessary */
+
+@media (max-width: 767px) {
+    #footer {
+        margin-left: -20px;
+        margin-right: -20px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+
+
+/* Custom page CSS
+      -------------------------------------------------- */
+
+
+/* Not required for template or sticky footer method. */
+
+.container {
+    width: auto;
+    height: auto;
+}
+
+.container .credit {
+    margin: 20px 0;
+}
+
+.page-header {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
